--- a/notebooks/DataCleanup+LGBMwrap+MeterModel (1.09).ipynb
+++ b/notebooks/DataCleanup+LGBMwrap+MeterModel (1.09).ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,15 @@
     "            ix = np.nonzero((X[self.col] == val).to_numpy())\n",
     "            predictions = self.fitted[val].predict(X.iloc[ix].drop(columns=[self.col]))\n",
     "            result[ix] = predictions\n",
-    "        return result"
+    "        return result\n",
+    "    \n",
+    "    def get_score(self):\n",
+    "        return self.model.best_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "135"
+       "280"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,9 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[51676   585   418 11594  9500 29236 17778  3956 16470  1612 11616  4451\n",
+      "  1693 22825  6605  9062     0  3063     0]\n",
+      "None\n",
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[26919    54    80 12845  9967 16202 17155  7831 20197  3317 26361 11948\n",
+      "  5204 19429 16441 14393     0  2150     0]\n",
+      "None\n",
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[47031   709   179 16444 10825 23214 21166  8879 23977  2881 22751 10238\n",
+      "  3731 21555 13236 13296     0  3161     0]\n",
+      "None\n",
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[31973   312   289 13637  9298 16408 18407  9283 19854  3861 21653 11706\n",
+      "  5239 19544 14689 14906     0  2270     0]\n",
+      "None\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -196,7 +221,7 @@
        "                                    subsample_freq=0))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +448,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,6 +505,141 @@
    "outputs": [],
    "source": [
     "predictions.to_csv(\"submission6.csv\", index=False, float_format=\"%.4f\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Score: 1.09**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[52223   559   390 11452  9227 29548 15749  3474 14338  1125  9434  3744\n",
+      "  1342 22940  5348  7217     0  2242     0]\n",
+      "None\n",
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[26759    54    98 11030 10102 16116 14288  6419 16529  2462 21002  9406\n",
+      "  3948 19995 12574 11518     0  1466     0]\n",
+      "None\n",
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[46232   745   158 13289 10720 22814 17380  6756 18378  1883 16265  7316\n",
+      "  2538 21093  9272  9603     0  2010     0]\n",
+      "None\n",
+      "defaultdict(<class 'collections.OrderedDict'>, {})\n",
+      "[31860   334   277 11421  9395 16723 14908  7446 16206  2630 16242  8730\n",
+      "  3674 19453 10726 11417     0  1515     0]\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CatSplitRegressor(col='meter',\n",
+       "                  model=LGBMWrapper(boosting_type='gbdt',\n",
+       "                                    categorical_feature=['building_id',\n",
+       "                                                         'site_id', 'meter',\n",
+       "                                                         'primary_use', 'day',\n",
+       "                                                         'month', 'hour',\n",
+       "                                                         'weekday',\n",
+       "                                                         'is_holiday',\n",
+       "                                                         'weekend'],\n",
+       "                                    class_weight=None, colsample_bytree=1.0,\n",
+       "                                    importance_type='split', learning_rate=0.06,\n",
+       "                                    max_depth=12, min_child_samples=20,\n",
+       "                                    min_child_weight=48, min_split_gain=0.0578,\n",
+       "                                    n_estimators=100, n_jobs=-1,\n",
+       "                                    num_leaves=2150, objective=None,\n",
+       "                                    random_state=0, reg_alpha=3.85,\n",
+       "                                    reg_lambda=2.26, silent=True, subsample=1.0,\n",
+       "                                    subsample_for_bin=200000,\n",
+       "                                    subsample_freq=0))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_2 = CatSplitRegressor(\n",
+    "    LGBMWrapper(random_state=0, n_jobs=-1, \n",
+    "                reg_alpha=3.85, \n",
+    "                reg_lambda=2.26, \n",
+    "                learning_rate = 0.06, \n",
+    "                max_depth = 12, \n",
+    "                min_child_weight =48,\n",
+    "                min_split_gain=0.0578,\n",
+    "                num_leaves=2150,\n",
+    "                categorical_feature=categorical_columns), \"meter\")\n",
+    "\n",
+    "model_2.fit(features, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.drop(columns=['row_id'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_2 = pd.DataFrame({\n",
+    "    \"row_id\": test.index,\n",
+    "    \"meter_reading\": np.clip(np.expm1(model_2.predict(test)), 0, None)\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41697600, 2)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_2.to_csv(\"submission7.csv\", index=False, float_format=\"%.4f\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Score: 1.09**"
    ]
   },
   {
